themesdir = $(pkgdatadir)/themes
themes_DATA = transparent-background \
	      example_theme \
	      nightly_theme \
	      green_theme \
	      yellow_red_theme \
	      black_theme \
	      moca_theme \
	      red_theme \
	      darkdot_theme \
	      lcars \
	      lcars2 \
	      winter
EXTRA_DIST = $(themes_DATA)
